...
            app:tabMode="fixed" />

    </android.support.design.widget.AppBarLayout>

    <!-- content -->
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!-- controls -->
    <fragment
...
