...
    <Space
        android:id="@+id/favorite_gone_padding"
        android:layout_width="16dp"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

